<resources>
    <string name="app_name">TaxiDriverApp</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <style name="error_appearance" parent="@android:style/TextAppearance">
        <item name="android:textColor">@color/error</item>
    </style>

    <style name="hint_appearance" parent="@android:style/TextAppearance">
        <item name="android:textSize">12sp</item>

    </style>

    <string name="google_maps_key2">AIzaSyBfIo6MvwH7KwDr60naJfKhR2XS0osQnNM</string>

    <string name="menu_home">My Profile</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">History</string>
    <string name="menu_tools">Help</string>
    <string name="menu_share">Invite Friends</string>
    <string name="menu_send">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
