<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">





    <activity android:id="@+id/nav_myprofile"
        android:name="com.eleganzit.taxidriverapp.MyProfileActivity"
        tools:layout="@layout/activity_my_profile"></activity>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.eleganzit.taxidriverapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment

        android:id="@+id/nav_home"
        android:name="com.eleganzit.taxidriverapp.ui.home.HomeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <activity android:id="@+id/nav_slideshow"
        android:name="com.eleganzit.taxidriverapp.HistoryActivity"
        tools:layout="@layout/activity_history"></activity>

    <activity android:id="@+id/nav_settings"
        android:name="com.eleganzit.taxidriverapp.SettingsActivity"
        tools:layout="@layout/activity_settings"></activity>
    <fragment
        android:id="@+id/nav_tools"
        android:name="com.eleganzit.taxidriverapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.eleganzit.taxidriverapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.eleganzit.taxidriverapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>