<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="5dp"
    android:paddingBottom="5dp"


    android:background="@color/black"


    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/images" />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_gravity="bottom"
        android:orientation="vertical"
        ><TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@android:color/white"

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" /></LinearLayout>
</LinearLayout>
    <LinearLayout android:background="@color/black" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_weight="1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/ic_star"
                ></ImageView>

            <TextView
android:textColor="@android:color/white"
                android:text="4.5/5"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>


            <TextView
                android:text="Rating"
android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>


        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_margin="2dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/ic_speed"
                ></ImageView>
            <TextView
                android:textColor="@android:color/white"
                android:text="10.2 KM"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>


            <TextView
                android:text="Distance"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>


        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:padding="5dp"
            android:layout_gravity="center"

            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_margin="2dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/ic_doc"
                ></ImageView>
            <TextView
                android:textColor="@android:color/white"
                android:text="10"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>


            <TextView
                android:text="Total Trips"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
